Ändrat län till VAT i formuläret.

--- a/Hemsida/Bestallningsformular.html
+++ b/Hemsida/Bestallningsformular.html
@@ -37,10 +37,10 @@
 			<td width="40">
 			</td>
 			<td class="Uppgifter">
-				Län:
+				Organisationsnummer:
 			</td>
 			<td>
-				<input type="text" size="30" name="Lan">
+				<input type="text" size="30" name="VAT">
 			</td>
 		</tr>
 		<tr>
